# scripts

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  aikit  install.ps1  install.sh  keyferry  medcat  netsy  pluck  pyproject.toml  requirements.txt  scripts  voxtract
.github/workflows/: tests.yml
_qa_sandbox/: results.json  run_pok79.py
docs/: aikit-gateway.md  aikit.md  keyferry.md  medcat.md  netsy.md  pluck.md  scriptkit.md  voxtract.md
requirements/: aikit.txt  all.txt  base.txt  keyferry.txt  medcat.txt  pluck.txt  voxtract.txt
scriptkit/: __init__.py  app.py  blocks.py  cli.py  config.py  console.py  doctor.py  proc.py  progress.py  style.py  tables.py  text.py
templates/: tool_template.py
tests/: conftest.py  test_aikit_api_config.py  test_aikit_gateway.py  test_aikit_gateway_coverage.py  test_aikit_gateway_passthrough.py  test_aikit_gateway_tools.py  test_aikit_interrupt.py  test_app.py  test_blocks.py  test_cli.py  test_cli_progress_tables.py  test_config.py  test_console.py  test_doctor.py  test_proc.py  test_scripts_install.py  test_style.py  test_template.py  test_text.py  test_tools_characterization.py
